# yetanothersentimentapp

./: .dockeringore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yaml  main.py  pyproject.toml  sam-template.yaml  settings.py
.github/workflows/: ci_cd_workflow.yaml
src/app/inference/: sentiment_model.py  text_processor.py
src/app/models/: __init__.py  predict_request.py  predict_response.py
src/scripts/: download_model_artifacts.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py
tests/: test_settings.py  test_text_processor.py
